# upscale

./: .gitignore  Dockerfile  main.py  nixpacks.toml  pyproject.toml  requirements.txt
progress/: 5cabba6e-fc70-4403-b7c8-36474d009e9d.json  672686ca-e3ff-4b35-b654-d9ca94e12ad1.json  676553fa-0710-4615-9732-871ce0630440.json  a1d224b4-5951-4b44-bad2-cc923066c199.json  c7307fc5-c8b8-4201-80d2-9928cb0f9597.json
routes/: upscale.py
services/: upscale_service.py
