[project]
name = "fastapi-example"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi[standard]",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "click==8.4.1",
    "colorama==0.4.6",
    "h11==0.16.0",
    "idna==3.18",
    "numpy",
    "pillow==12.2.0",
    "pydantic==2.13.4",
    "python-multipart==0.0.32",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "pillow-heif",
    "pillow-avif-plugin"
]